...
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/forward_button_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/next_arrow"
...
